--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 <body>
     <header>
         <h3>uma seleção de produtos</h3>
-        <h1>especial para você</h1>
+        <div class="conteiner">
+            <h1>especial para você</h1>
+            <nav>
+                <a href="#" class="menu">Conheça a Linx</a>
+                <a href="#" class="menu">Ajude o algoritmo</a>
+                <a href="#" class="menu">Seus produtos</a>
+                <a href="#" class="menu">Compartilhe</a>
+            </nav>
+        </div>
         <p>Todos os produtos desta lista foram selecionados a partir da sua navegação. Aproveite!</p>
-        <nav>
-            <a href="#" class="menu">Conheça a Linx</a>
-            <a href="#" class="menu">Ajude o algoritmo</a>
-            <a href="#" class="menu">Seus produtos</a>
-            <a href="#" class="menu">Compartilhe</a>
-        </nav>
     </header>
     
     <nav id="conteiner">
@@ -185,8 +187,7 @@
         <button type="submit" id="convite">Enviar agora</button>
     </div>
     <footer class="rodape">
-        
-        <h6>Testando suas habilidades em HTML, CSS e JS. Linx Impulse 2019</h6>
+        <h6>Testando suas habilidades em HTML, CSS e JS. <br>Linx Impulse <br>2019</h6>
     </footer>
 </body>
 </html>
